--- a/problem/src/main/resources/templates/index.html
+++ b/problem/src/main/resources/templates/index.html
@@ -1,12 +1,148 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>首页</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link th:href="@{/css/1.css}" rel="stylesheet"/>
-</head>
-<body>
+<html class="noIE" lang="en" xmlns:th="http://www.thymeleaf.org">
+<!--<![endif]-->
+	<head>
+		<title>Sovpft</title>
 
-</body>
+		<!-- meta -->
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+		<meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no"/>
+		
+		<!-- google fonts -->
+
+		<!-- css -->
+		<link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
+		<link rel="stylesheet" th:href="@{/css/font-awesome.min.css}">
+		<link rel="stylesheet" th:href="@{/css/style.css}" media="screen"/>
+
+		<!--[if lt IE 9]>
+			<script th:src="@{/js/html5shiv.js}"></script>
+			<script th:src="@{/js/respond.js}"></script>
+		<![endif]-->
+
+		<!--[if IE 8]>
+	    	<script th:src="@{/js/selectivizr.js}"></script>
+	    <![endif]-->
+	</head>
+	
+	<body>
+		<div id="drawer-right">
+			<div class="cross text-right">
+				<a class="toggleDrawer" href="#"><i class="fa fa-times-circle fa-2x"></i></a>
+			</div>
+			<h2>Sovpft</h2>
+			<nav>
+				<ul class="nav nav-pills nav-stacked">
+					<li>
+						<a href="#wrapper"><i class="fa fa-home"></i> 主页</a>
+					</li>
+					<li>
+						<a href="#portfolio"><i class="fa fa-bookmark"></i>联合</a>
+					</li>
+					<li>
+						<a href="#services"><i class="fa fa-tasks"></i>服务</a>
+					</li>
+					<li>
+						<a href="#blog"><i class="fa fa-wordpress"></i>博客</a>
+					</li>
+					<li>
+						<a href="#testimonials"><i class="fa fa-thumbs-up"></i>点赞</a>
+					</li>
+					<li>
+						<a href="#contact"><i class="fa fa-phone-square"></i>联系</a>
+					</li>
+				</ul>
+			</nav>
+			<div class="social">
+				<h2>Stay Connected</h2>
+				<ul>
+					<li><a href=""><i class="fa fa-facebook-square fa-3x"></i></a></li>
+					<li><a href=""><i class="fa fa-twitter-square fa-3x"></i></a></li>
+					<li><a href=""><i class="fa fa-tumblr-square fa-3x"></i></a></li>
+					<li><a href=""><i class="fa fa-google-plus-square fa-3x"></i></a></li>
+				</ul>
+			</div>
+		</div><!-- #drawer-right -->
+
+		<div id="wrapper">
+			
+			<div id="header" class="content-block header-wrapper">
+				<div class="header-wrapper-inner">
+					<section class="top clearfix">
+						<div class="pull-left">
+							<h1><a class="logo" href="index.html">Flusk</a></h1>
+						</div>
+						<div class="pull-right">
+							<a class="toggleDrawer" href="#"><i class="fa fa-bars fa-2x"></i></a>
+						</div>
+					</section>
+					<section class="center">
+						<div class="slogan">
+							Solves The&amp; Problem Fast
+						</div>
+						<div class="secondary-slogan">
+							这个问题要这么来做。
+						</div>
+					</section>
+					<section class="bottom">
+						<a id="scrollToContent" href="#">
+							<img th:src="@{/images/arrow_down.png}">
+						</a>
+					</section>
+				</div>
+			</div><!-- header -->
+
+
+			<div class="content-block" id="blog">
+				<div class="container">
+					<header class="block-heading cleafix">
+						<a href="#" class="btn btn-o btn-lg pull-right">View All</a>
+                    <h1>来自博客</h1>
+						<p>跟上大佬们的脚步.</p>
+					</header>
+					<section class="block-body">
+						<div class="row">
+							<div class="col-sm-4 blog-post">
+								<img th:src="@{/images/bike_water1-1000x600.jpg}">
+								<a href="#"><h2>设计你的想法</h2></a>
+								<div class="date">3 Nov, 2014</div>
+								<p></p>
+								<a href="">Read More</a>
+							</div>
+							<div class="col-sm-4 blog-post">
+								<img th:src="@{/images/mac_glasses1-1000x600.jpg}">
+								<a href="#"><h2>凛冬将至</h2></a>
+								<div class="date">3 Nov, 2014</div>
+								<p></p>
+								<a href="">Read More</a>
+							</div>
+							<div class="col-sm-4 blog-post">
+								<img th:src="@{/images/road-1000x600.jpg}">
+								<a href="#"><h2>插图</h2></a>
+								<div class="date">3 Nov, 2014</div>
+								<p></p>
+								<a href="">Read More</a>
+							</div>
+						</div>
+					</section>
+				</div>
+			</div><!-- #blog -->
+
+
+
+
+		</div><!--/#wrapper-->
+
+
+
+
+		<script th:src="@{/js/jquery-2.1.3.min.js}"></script>
+		<script th:src="@{/js/jquery-migrate-1.2.1.min.js}"></script>
+		<script th:src="@{/js/bootstrap.min.js}"></script>
+		<script th:src="@{/js/jquery.actual.min.js}"></script>
+		<script th:src="@{/js/jquery.scrollTo.min.js}"></script>
+		<script th:src="@{/js/script.js}"></script>
+
+	</body>
 </html>
