--- a/problem/src/main/resources/templates/index.html
+++ b/problem/src/main/resources/templates/index.html
@@ -132,8 +132,18 @@
 		<script th:src="@{/js/jquery.actual.min.js}"></script>
 		<script th:src="@{/js/jquery.scrollTo.min.js}"></script>
 		<script th:src="@{/js/script.js}"></script>
-		<script type="text/javascript">
-
+	    <script th:src="@{/js/problem/index.js}"></script>
+		<script>
+            function onKeyDown(event){
+                var e = event || window.event || arguments.callee.caller.arguments[0];
+                if(e && e.keyCode==27){ // 按 Esc
+                }
+                if(e && e.keyCode==113){ // 按 F2
+                }
+                if(e && e.keyCode==13){ // enter 键
+                    window.location.href="/problem/search";
+                }
+            }
 		</script>
 	</body>
 </html>
