添加部分工具类

--- a/problem/src/main/resources/templates/index.html
+++ b/problem/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="noIE" lang="en" xmlns:th="http://www.thymeleaf.org">
+<html class="noIE" lang="ch" xmlns:th="http://www.thymeleaf.org">
 <!--<![endif]-->
 	<head>
 		<title>Sovpft</title>
@@ -8,19 +8,14 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no"/>
-		
-		<!-- google fonts -->
-
 		<!-- css -->
 		<link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
 		<link rel="stylesheet" th:href="@{/css/font-awesome.min.css}">
 		<link rel="stylesheet" th:href="@{/css/style.css}" media="screen"/>
-
 		<!--[if lt IE 9]>
 			<script th:src="@{/js/html5shiv.js}"></script>
 			<script th:src="@{/js/respond.js}"></script>
 		<![endif]-->
-
 		<!--[if IE 8]>
 	    	<script th:src="@{/js/selectivizr.js}"></script>
 	    <![endif]-->
