--- a/problem/src/main/resources/templates/search/entry.html
+++ b/problem/src/main/resources/templates/search/entry.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="noIE" lang="en" xmlns:th="http://www.thymeleaf.org">
+<html class="noIE" lang="ch" xmlns:th="http://www.thymeleaf.org">
 <!--<![endif]-->
 <head>
     <title>查询结果</title>
